--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <div>
     <h1>IDEA STACKER</h1>
+    <div class="list-container">
+      <ul>
+        <li>アイデア1</li>
+        <li>アイデア2</li>
+        <li>アイデア3</li>
+      </ul>
+      <ul>
+        <li>アイデア4</li>
+        <li>アイデア5</li>
+        <li>アイデア6</li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
