テーブルの値をDOMに反映する処理の追加

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,9 @@
   <div>
     <h1>IDEA STACKER</h1>
     <div class="list-container">
-      <ul>
-        <li>アイデア1</li>
-        <li>アイデア2</li>
-        <li>アイデア3</li>
+      <ul id="positive-list">
       </ul>
-      <ul>
-        <li>アイデア4</li>
-        <li>アイデア5</li>
-        <li>アイデア6</li>
+      <ul id="negative-list">
       </ul>
     </div>
   </div>
