保存処理の追加

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
 <body>
   <div>
     <h1>IDEA STACKER</h1>
+    <div class="form-container">
+      <form class="form-section">
+        <input type="radio" name="idea-type" value="1" checked id="positive-radio">ポジティブ
+        <input type="radio" name="idea-type" value="2" id="negative-radio">ネガティブ
+        <p>アイデア</p>
+        <input type="text" id="idea-text"><br>
+        <button type="submit" id="add-button">追加</button>
+      </form>
+    </div>
     <div class="list-container">
       <ul id="positive-list">
       </ul>
