画面再描画処理とチェックボックスの追加

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
         <input type="radio" name="idea-type" value="1" checked id="positive-radio">ポジティブ
         <input type="radio" name="idea-type" value="2" id="negative-radio">ネガティブ
         <p>アイデア</p>
-        <input type="text" id="idea-text"><br>
+        <input type="text" id="idea-text">
         <button type="submit" id="add-button">追加</button>
       </form>
     </div>
     <div class="list-container">
-      <ul id="positive-list">
+      <ul class="list" id="positive-list">
       </ul>
-      <ul id="negative-list">
+      <ul class="list" id="negative-list">
       </ul>
     </div>
   </div>
